Sun Aug  8 08:03:54 2004  Shugo Maeda  <shugo@modruby.net>

	* version 1.2.1 released.

Sun Aug  8 07:41:03 2004  Shugo Maeda <shugo@modruby.net>

	* mod_ruby.c (ruby_child_init): added new handler
	RubyChildInitHandler.

Fri Jul 16 17:19:01 2004  Shugo Maeda <shugo@modruby.net>

	* mod_ruby.c (ruby_startup): cast NULL correctly.

Thu Jul 15 22:11:33 2004  Shugo Maeda <shugo@modruby.net>

	* mod_ruby.c (ruby_object_handler): check r->handler.

Thu Jul  1 13:31:35 2004  Shugo Maeda <shugo@modruby.net>

	* mod_ruby.c (ruby_log_error_string): do not pass newlines
	to ap_log_error().

	* mod_ruby.c (ruby_startup): add the version of ruby to the Server:
	header field.

Fri May 21 00:30:40 2004  Shugo Maeda <shugo@modruby.net>

	* lib/apache/erb-run.rb (compile): untaint generated codes.

	* lib/apache/eruby-run.rb (compile): ditto.

Mon May 17 11:36:51 2004  Shugo Maeda <shugo@modruby.net>

	* doc/faq.en.rd: fix for cgi.rb.

	* doc/faq.ja.euc.rd: ditto.

Thu May 13 14:49:33 2004  Shugo Maeda <shugo@modruby.net>

	* version 1.2.0 released.

Tue May 11 14:32:54 2004  Shugo Maeda <shugo@modruby.net>

	* configure.rb.in: fix for NetBSD.

Fri Apr 30 14:41:21 2004  Shugo Maeda <shugo@modruby.net>

	* mod_ruby.c: fix for NetBSD. Thanks, Dick Davies.

Mon Apr  5 16:20:55 2004  Shugo Maeda <shugo@modruby.net>

	* version 1.1.3 released.

Wed Mar 31 15:48:21 2004  Shugo Maeda <shugo@modruby.net>

	* lib/apache/erb-run.rb: support ERB2.

Wed Feb 25 13:37:07 2004  U.Nakamura <usa@garbagecollect.jp>

	* autoconf.rb: should use RUBY_PLATFORM instead of PLATFORM.

Tue Jan 27 22:50:43 2004  Lothar Scholz <llothar@web.de>

	* mod_ruby.c: fix for win32.

	* apachelib.c: ditto.

	* request.c: ditto.

Wed Jan  7 00:50:00 2004  Shugo Maeda <shugo@modruby.net>

	* mod_ruby.c: fix for mod_autoindex. Thanks, Shu-yu Guo.

	* configure.rb.in: new option --with-apr-includes for Debian.

Sat Dec 27 11:41:08 2003  Shugo Maeda <shugo@modruby.net>

	* version 1.1.2 released.
