@@ -1,3 +1,8 @@
+Mon Aug  9 15:44:09 2004  Shugo Maeda  <shugo@modruby.net>
+
+	* mod_ruby.c (ruby_child_init): wait until ruby_is_running is
+	set to 1.
+
 Sun Aug  8 08:03:54 2004  Shugo Maeda  <shugo@modruby.net>
 
 	* version 1.2.1 released.
